--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.0.0",
+    "form-data": "^4.0.0",
     "next": "12.3.1",
     "nft.storage": "^7.0.0",
     "react": "18.2.0",
