--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "12.3.1",
     "nft.storage": "^7.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "eslint": "8.24.0",
