--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aws-sdk": "^2.1237.0",
     "axios": "^1.0.0",
     "form-data": "^4.0.0",
     "next": "12.3.1",
