--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@celo/contractkit": "^2.3.0",
+    "@celo/react-celo": "^4.2.1",
     "aws-sdk": "^2.1237.0",
     "axios": "^1.0.0",
     "form-data": "^4.0.0",
@@ -16,7 +18,6 @@
     "nft.storage": "^7.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-meta-tags": "^1.0.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
