--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aws-sdk": "^2.1237.0",
     "axios": "^1.0.0",
     "form-data": "^4.0.0",
+    "js-confetti": "^0.11.0",
     "next": "12.3.1",
     "nft.storage": "^7.0.0",
     "react": "18.2.0",
