fixed IPFS latency issue

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nft.storage": "^7.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-youtube": "^10.0.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
